@@ -18,6 +18,8 @@ debian-installer (20031213) UNRELEASED; urgency=low
       create them at the rule's end.
     - Ignore errors for the all_clean target.
     - Don't use USERDEVFS for linux-mips.
+  * Marco d'Itri
+    - Add preliminary support for .ko kernel modules.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 13 Dec 2003 18:44:06 -0500
 
